--- a/NewsLetter_FIFO/style.css
+++ b/NewsLetter_FIFO/style.css
@@ -14,28 +14,41 @@
 .hr-light{
   height: 1px;
   background-color: rgba(0, 0, 0, 0.275);
+  margin: 0 3%;
   border: none;
 }
-.hr-dark{
-  margin-top: 2px;
+
+.hr-last{
   height: 1px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.275);
   border: none;
+  margin-bottom: 20px;
+  margin: 0% 20%;
+}
+.posts{
+  border: 1px solid rgba(0, 0, 0, 0.275);
+  background-color: rgba(0, 162, 255, 0.058);
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 .main{
-  border-top: 1px solid rgba(0, 0, 0, 0.275);;
-  background-color: rgba(0, 162, 255, 0.058);
+  /* border-top: 1px solid rgba(0, 0, 0, 0.275); */
+  border-radius: 10px;
   margin: 0% 20%;
-  padding: 1% 2%;
   font-family: 'Montserrat', sans-serif;
 }
 .main > h3{
+  padding: 2%;
   font-size: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.275);
+  background-color: rgba(0, 162, 255, 0.058);
+  border-radius: 10px;
 }
 .space-header{
   padding: 1%;
   display: flex;
   gap: 1%;
+  background-color: white;
   justify-content: center;
   align-items: center;
 }
@@ -50,16 +63,6 @@
   font-size: 20px;
   margin-bottom: 1%;
   cursor: pointer;
-}
-.post{
-  display: flex;
-  justify-content: space-between;
-  padding: 2% 0;
-  gap: 2%;
-}
-.post-img{
-  height: 120px;
-  width: 120px;
 }
 .post-content{
   display: flex;
@@ -83,4 +86,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 10px;
+  padding: 2% 3%;
 }
